Fix invasive rules in CSS, tidy up

--- a/sass/partials/bootstrap_styling.scss
+++ b/sass/partials/bootstrap_styling.scss
@@ -220,7 +220,7 @@ $brand-text-color: #fff;
     .nav-side-menu .menu-list .menu-content {
         display: block;
     }
-    #main {
+    .main {
         width: calc(100% - 200px);
         float: right;
     }
