--- a/sass/partials/theme.scss
+++ b/sass/partials/theme.scss
@@ -9,11 +9,21 @@
     }
 }
 
-#main {
+.main {
     padding: 0 2em 0 2em;
     animation-duration: .38s;
     animation-fill-mode: both;
     animation-name: fadeInAnimation;
+
+    h1 {
+        //text-align: center;
+        font-family: $title-font;
+        font-size: 50px;
+        //line-height: 65px;
+        font-weight: 700;
+        color: $primary_color;
+        margin-top:0px;
+    }
 }
 
 body {
@@ -26,7 +36,7 @@ body {
     width: 100%;
 }
 
-#main h1 {
+.main h1 {
     //text-align: center;
     font-family: $title-font;
     font-size: 50px;
@@ -36,19 +46,19 @@ body {
     margin-top:0px;
 }
 
-#main h2 {
+.main h2 {
     font-weight: 600;
     font-size: 24px;
     font-family: $header-font;
     color: $primary_color;
 }
 
-#main h3, h4, h5, h6 {
+.main h3, h4, h5, h6 {
     font-family: $header-font;
     color: $primary_color;
 }
  
-#main p {
+.main p {
     //font-family: 'Ubuntu', Helvetica, Arial, serif;
     font-family: $body-font;
     font-size: 16px;
@@ -58,23 +68,23 @@ body {
     //text-align: justify;
 }
 
-#main strong {
+.main strong {
     font-weight: 700;
     color: $bold_text_color;
 }
 
-#main em {
+.main em {
     font-style: italic;
 }
 
-#main hr {
+.main hr {
     height: 30px;
     border-style: solid;
     border-color: $primary_color;//#6a6a6a;
     border-width: 1px 0 0 0;
 }
 
-#main span.highlight {
+.main span.highlight {
     font-weight: 700;
     color: $bold_text_color;
 }
@@ -94,16 +104,16 @@ body {
     border: 0 none;
 }
 
-#main ul {
+.main ul {
     list-style-position: inside;
     padding-left:1.5em;
 }
 
-#main ul > li {
+.main ul > li {
     display: block;
 }
 
-.nav-side-menu #main ul > li:before {
+.nav-side-menu .main ul > li:before {
     /*Using a Bootstrap glyphicon as the bullet point*/
     content: "\e080";
     font-family: 'Glyphicons Halflings';
@@ -114,7 +124,7 @@ body {
     color: #CCCCCC;
 }
 
-#main .img-inline {
+.main .img-inline {
     float:left;
     margin: 0em 2em 1em 0;
     border-radius: 12px;
@@ -135,10 +145,10 @@ canvas.fullscreenWidget {
 
 // Sidebar is collapsed
 @media (max-width: 767px) {
-    #main h1 {
+    .main h1 {
         text-align: center;
     }
-    #main .img-inline {
+    .main .img-inline {
         float:none;
         margin:auto;
         margin-bottom: 1em;
@@ -159,7 +169,7 @@ code {
     background-color: $code_snippet_background_color;
 }
 
-#main a {
+.main a {
 	color: $link_color;
     text-decoration: none;
     border-bottom: 1px solid $link_color;
@@ -170,7 +180,7 @@ code {
     -webkit-transition:.5s;
     transition:.5s;
 }
-#main a:hover{
+.main a:hover{
     background: $link_color;
     color: $theme_background_color;
 }
