--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,14 +1,10 @@
-//http://thesassway.com/beginner/how-to-structure-a-sass-project
-
-// Modules (variables and functions)
-//"The modules directory is reserved for Sass code that doesn't cause Sass to 
-//actually output CSS. Things like mixin declarations, functions, and variables."
-@import "partials/base";
+// Modules
+// Globals, functions, mixins
+@import "modules/all.scss";
 
 // Partials
 // Split css files for header, content, footer, etc.
-@import "partials/bootstrap_styling";
-@import "partials/theme";
+@import "partials/all.scss";
 
 // Vendor
 @import "/vendor/bootstrap/css/bootstrap.min.css";
