Switch to Pug for building HTML (in progress)

--- a/sass/partials/theme.scss
+++ b/sass/partials/theme.scss
@@ -24,6 +24,90 @@
         color: $primary_color;
         margin-top:0px;
     }
+
+    h2 {
+        font-weight: 600;
+        font-size: 24px;
+        font-family: $header-font;
+        color: $primary_color;
+    }
+
+    h3, h4, h5, h6 {
+        font-family: $header-font;
+        color: $primary_color;
+    }
+
+    p {
+        //font-family: 'Ubuntu', Helvetica, Arial, serif;
+        font-family: $body-font;
+        font-size: 16px;
+        line-height: 25px;
+        font-weight:400;
+        color: $primary_text_color;
+        //text-align: justify;
+    }
+
+    strong {
+        font-weight: 700;
+        color: $bold_text_color;
+    }
+
+    em {
+        font-style: italic;
+    }
+
+    hr {
+        height: 30px;
+        border-style: solid;
+        border-color: $primary_color;//#6a6a6a;
+        border-width: 1px 0 0 0;
+    }
+
+    span.highlight {
+        font-weight: 700;
+        color: $bold_text_color;
+    }
+
+    ul {
+        list-style-position: inside;
+        padding-left:1.5em;
+        > li {
+            display: block;
+            &:before{
+                /*Using a Bootstrap glyphicon as the bullet point*/
+                content: "\e080";
+                font-family: 'Glyphicons Halflings';
+                font-size: 9px;
+                float: left;
+                margin-top: 7px;
+                margin-left: -17px;
+                color: #CCCCCC;
+
+            }
+        }
+    }
+
+    .img-inline {
+        float:left;
+        margin: 0em 2em 1em 0;
+        border-radius: 12px;
+        border: solid 2px $primary_color;
+    //    width: 50%;
+    //    height: 50%;
+    }
+
+    a {
+        color: $link_color;
+        text-decoration: none;
+        border-bottom: 1px solid $link_color;
+        transition:.5s;
+
+        &:hover{
+            background: $link_color;
+            color: $theme_background_color;
+        }
+    }
+
 }
 
 body {
@@ -34,59 +118,6 @@ body {
     padding: 0;
     height: 100%;
     width: 100%;
-}
-
-.main h1 {
-    //text-align: center;
-    font-family: $title-font;
-    font-size: 50px;
-    //line-height: 65px;
-    font-weight: 700;
-    color: $primary_color;
-    margin-top:0px;
-}
-
-.main h2 {
-    font-weight: 600;
-    font-size: 24px;
-    font-family: $header-font;
-    color: $primary_color;
-}
-
-.main h3, h4, h5, h6 {
-    font-family: $header-font;
-    color: $primary_color;
-}
- 
-.main p {
-    //font-family: 'Ubuntu', Helvetica, Arial, serif;
-    font-family: $body-font;
-    font-size: 16px;
-    line-height: 25px;
-    font-weight:400;
-    color: $primary_text_color;
-    //text-align: justify;
-}
-
-.main strong {
-    font-weight: 700;
-    color: $bold_text_color;
-}
-
-.main em {
-    font-style: italic;
-}
-
-.main hr {
-    height: 30px;
-    border-style: solid;
-    border-color: $primary_color;//#6a6a6a;
-    border-width: 1px 0 0 0;
-}
-
-.main span.highlight {
-    font-weight: 700;
-    color: $bold_text_color;
 }
 
 #stopThursdayButton {
@@ -104,35 +135,6 @@ body {
     border: 0 none;
 }
 
-.main ul {
-    list-style-position: inside;
-    padding-left:1.5em;
-}
-
-.main ul > li {
-    display: block;
-}
-
-.nav-side-menu .main ul > li:before {
-    /*Using a Bootstrap glyphicon as the bullet point*/
-    content: "\e080";
-    font-family: 'Glyphicons Halflings';
-    font-size: 9px;
-    float: left;
-    margin-top: 7px;
-    margin-left: -17px;
-    color: #CCCCCC;
-}
-
-.main .img-inline {
-    float:left;
-    margin: 0em 2em 1em 0;
-    border-radius: 12px;
-    border: solid 2px $primary_color;
-//    width: 50%;
-//    height: 50%;
-}
-
 canvas.fullscreenWidget {
     position: absolute;
     left: 0;
@@ -145,15 +147,20 @@ canvas.fullscreenWidget {
 
 // Sidebar is collapsed
 @media (max-width: 767px) {
-    .main h1 {
-        text-align: center;
+    .main {
+        h1{
+            text-align: center;
+        }
+
+        .img-inline {
+            float:none;
+            margin:auto;
+            margin-bottom: 1em;
+            margin-top: 1em;
+        }
+
     }
-    .main .img-inline {
-        float:none;
-        margin:auto;
-        margin-bottom: 1em;
-        margin-top: 1em;
-    }
+
 }
 
 // Sidebar is enabled
@@ -167,22 +174,6 @@ code {
 
     //color: $code_snippet_text_color;
     background-color: $code_snippet_background_color;
-}
-
-.main a {
-	color: $link_color;
-    text-decoration: none;
-    border-bottom: 1px solid $link_color;
-
-    -o-transition:.5s;
-    -ms-transition:.5s;
-    -moz-transition:.5s;
-    -webkit-transition:.5s;
-    transition:.5s;
-}
-.main a:hover{
-    background: $link_color;
-    color: $theme_background_color;
 }
 
 .blockHead:after {
