Move the rest of the website to Pug, reorganize

--- a/partials/layout.pug
+++ b/partials/layout.pug
@@ -47,7 +47,7 @@ html
 
             block before-content
 
-            main.container.main(role='main')
+            main.container.main-content(role='main')
                 article
                     block content
 
