--- a/partials/sidebar.pug
+++ b/partials/sidebar.pug
@@ -39,9 +39,9 @@ div
                     -
                         var project_cells = [
                             ["Media Ecology Project", '/pages/media-ecology/'],
-                            ['Reaction-Diffusion', '/reaction-diffusion.html'],
+                            ['Reaction-Diffusion', '/pages/reaction-diffusion/'],
                             ['Buoy Data Visualization', '/pages/lobo/'],
-                            ['Spurious (Spatial) Correlations', '/spuriousspatialcorrelations.html'],
+                            ['Spurious (Spatial) Correlations', '/pages/spurious-spatial-correlations/'],
                             ['Reflector', '/pages/reflector/']
                         ]
                     +collapsible("Projects", "fa-code", "projects", project_cells)
