Add "auto-generated" comment to page to explain messiness

--- a/partials/layout.pug
+++ b/partials/layout.pug
@@ -1,6 +1,9 @@
 doctype html
 html
+    // This page was auto-generated with Pug. See https://github.com/seieibob/seieibob.github.io/tree/dev
+
     block dinosaur
+    
     head
         block head
             // The following 3 meta tags *must* come first in the head; any other head content must come *after* these tags
