Fix page loading order

--- a/page/about.pug
+++ b/page/about.pug
@@ -37,30 +37,40 @@ append content
     h1 About Jon
     img.img-inline.img-responsive(src='/resources/images/profile_outside.png', style='width: 30%; height: auto;', alt='Portrait of Jon')
     section#bio
-        p
-            span.highlight Jonathan Cole
-            |  is a software developer and graduate student from Brewer, Maine. He enjoys game design and graphics programming in his spare time. He hopes to present at SIGGRAPH someday.
+        p.
+            I'm a software developer and graduate student from Brewer, Maine. I like doing game design and 
+            creative coding in my spare time. Someday, I'd like to present at SIGGRAPH.
     section#work
         h2 Work
+        p
+            b Current:
         ul
             li
-                p
-                    | VR / AR Developer at the 
-                    a(href='http://www.vemilab.org/') VEMILab
+                p VR / AR / everything else developer at the #[a(href='http://www.vemilab.org/') VEMILab]
             li
-                p Graduate Teaching Assistant, Computer Science Department, University of Maine
+                p Graduate Assistant, Computer Science Department, University of Maine
+        p
+            b Past:
+        ul
+            li
+                p Interactive Kiosk - #[i Sea What Grows Exhibit - Maine Discovery Museum]
+        
     section#education
         h2 Education
         ul
             li
                 p B.S. Computer Science - Spring 2015, University of Maine
             li
-                p
-                    | M.S. Spatial Information Science and Engineering - Spring 2017 (expected), University of Maine
+                p M.S. Spatial Information Science and Engineering - Spring 2017 (expected), University of Maine
     section#skills
         h2 Skills
-        p
-            | Jon has worked with a variety of languages and tools during his time at the VEMILab, and has worked extensively with Unity. Much of his time has been spent making various VR hardware communicate properly with Unity and other platforms. His academic work includes VR experiment design for human trials. He is effective both independently and in a team, and has worked in teams using Scrum and Kanban methodologies.
+        p.
+            I've worked with a variety of languages and tools during my time at the VEMILab, 
+            and has worked extensively with Unity. Much of his time has been spent making 
+            various VR hardware communicate properly with Unity and other platforms. His 
+            academic work includes VR experiment design for human trials. He is effective 
+            both independently and in a team, and has worked in teams using Scrum and 
+            Kanban methodologies.
         ul
             li
                 p
