--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,7 +7,8 @@
 @import "partials/all.scss";
 
 // Vendor
-@import "/dist/bootstrap/css/bootstrap.min.css";
-@import "/dist/bootstrap/css/bootstrap-accessibility.css";
-@import "http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css";
+//@import "/dist/bootstrap/css/bootstrap.min.css";
+// @import "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css";
+// @import "/dist/bootstrap/css/bootstrap-accessibility.css";
+// @import "http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css";
 //@import "/css/prettify.css";
