--- a/page/about.pug
+++ b/page/about.pug
@@ -66,10 +66,10 @@ append content
         h2 Skills
         p.
             I've worked with a variety of languages and tools during my time at the VEMILab, 
-            and has worked extensively with Unity. Much of his time has been spent making 
-            various VR hardware communicate properly with Unity and other platforms. His 
-            academic work includes VR experiment design for human trials. He is effective 
-            both independently and in a team, and has worked in teams using Scrum and 
+            and has worked extensively with Unity. Much of my time has been spent making 
+            various VR hardware communicate properly with Unity and other platforms. My 
+            academic work includes VR experiment design for human trials. I'm effective 
+            both independently and in a team, and have worked in teams using Scrum and 
             Kanban methodologies.
         ul
             li
@@ -89,7 +89,7 @@ append content
                     span.highlight Domains:
                     |  Virtual Reality, Augmented Reality, Graphics Programming, iOS Development, Front-End Web Development
         p
-            | You can see a sample of his public work at his 
+            | You can see a sample of my public work at my 
             a(href='https://www.github.com/seieibob') GitHub page
             | .
     section#contact
