--- a/partials/layout.pug
+++ b/partials/layout.pug
@@ -19,6 +19,12 @@ html
             
             block headinfo
 
+            // Set background color of CSS to prevent white flashing before everything has loaded
+            style(type='text/css').
+                body {
+                    background-color: #000000;
+                }
+
             // Load JQuery first
             script(src='https://code.jquery.com/jquery-3.2.1.min.js', 
                 integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=', 
@@ -29,7 +35,7 @@ html
             link(href="/dist/bootstrap/css/bootstrap-accessibility.css", rel="stylesheet")
             link(href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css", rel="stylesheet")
 
-            // Bootstrap core
+            // Bootstrap Core
             script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
             script(src='/dist/bootstrap/js/bootstrap-accessibility.min.js')
 
@@ -47,6 +53,9 @@ html
                 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
                 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
             <![endif]-->
+
+            // Custom styles for this template
+            link(href="/css/style.css", rel="stylesheet")
 
         // Custom scripts hook
         block scripts
@@ -87,9 +96,6 @@ html
                         }, 500);
                     }
                 });
-
-            // Custom styles for this template
-            link(href="/css/style.css", rel="stylesheet")
 
 
     foot
