--- a/page/about.pug
+++ b/page/about.pug
@@ -66,7 +66,7 @@ append content
         h2 Skills
         p.
             I've worked with a variety of languages and tools during my time at the VEMILab, 
-            and has worked extensively with Unity. Much of my time has been spent making 
+            and have worked extensively with Unity. Much of my time has been spent making 
             various VR hardware communicate properly with Unity and other platforms. My 
             academic work includes VR experiment design for human trials. I'm effective 
             both independently and in a team, and have worked in teams using Scrum and 
