Update comments and styling

--- a/page/about.pug
+++ b/page/about.pug
@@ -42,15 +42,13 @@ append content
             creative coding in my spare time. Someday, I'd like to present at SIGGRAPH.
     section#work
         h2 Work
-        p
-            b Current:
+        p #[b Current:]
         ul
             li
                 p VR / AR / everything else developer at the #[a(href='http://www.vemilab.org/') VEMILab]
             li
                 p Graduate Assistant, Computer Science Department, University of Maine
-        p
-            b Past:
+        p #[b Past:]
         ul
             li
                 p Interactive Kiosk - #[i Sea What Grows Exhibit - Maine Discovery Museum]
@@ -59,9 +57,9 @@ append content
         h2 Education
         ul
             li
-                p B.S. Computer Science - Spring 2015, University of Maine
+                p #[b B.S. Computer Science] - #[i Spring 2015, University of Maine]
             li
-                p M.S. Spatial Information Science and Engineering - Spring 2017 (expected), University of Maine
+                p #[b M.S. Spatial Information Science and Engineering] - #[i Summer 2017 (expected), University of Maine]
     section#skills
         h2 Skills
         p.
@@ -79,19 +77,19 @@ append content
             li
                 p
                     span.highlight Platforms:
-                    |  Unity, iOS, OpenFrameworks, Cinder
+                    |  Unity, Git, iOS, OpenFrameworks, Cinder
             li
                 p
                     span.highlight Frameworks:
-                    |  OpenCV, OpenGL
+                    |  Node, OpenCV, OpenGL
             li
                 p
                     span.highlight Domains:
                     |  Virtual Reality, Augmented Reality, Graphics Programming, iOS Development, Front-End Web Development
-        p
-            | You can see a sample of my public work at my 
-            a(href='https://www.github.com/seieibob') GitHub page
-            | .
+        p.
+            You can see a sample of my public work at my 
+            #[a(href='https://www.github.com/seieibob') GitHub page].
+            
     section#contact
         h2 Contact
         p
