--- a/partials/layout.pug
+++ b/partials/layout.pug
@@ -1,6 +1,12 @@
+//-
+    This is the base file that makes up every page on the website.
+    To use, extend it and append/prepend to any of the provided blocks.
+
 doctype html
 html
-    // This page was auto-generated with Pug. See https://github.com/seieibob/seieibob.github.io/tree/dev
+    //
+        --- Website by Jonathan Cole ---
+        This page was auto-generated with Pug. See https://github.com/seieibob/seieibob.github.io/tree/dev
 
     block dinosaur
     
