--- a/page/pages/reaction-diffusion/index.pug
+++ b/page/pages/reaction-diffusion/index.pug
@@ -79,7 +79,7 @@ append content
 
 
 append body
-    script(type='text/javascript', src='/dist/three.js')
+    script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.js')
     script(src='/widgets/reaction-diffusion/lib/stats.min.js')
     script(src='/widgets/reaction-diffusion/lib/dat.gui.min.js')
     link(rel='stylesheet', type='text/css', href='/widgets/reaction-diffusion/css/reaction-diffusion.css')
