--- a/page/pages/reaction-diffusion/index.pug
+++ b/page/pages/reaction-diffusion/index.pug
@@ -61,21 +61,21 @@ append content
             | Note: This only works on iOS with half the usual precision, so some of these configurations will not behave in the same way as they do on a desktop platform.
     
     // Disqus Stuff
-    //- #disqus_thread
-    //- script.
-    //-     var disqus_config = function () {
-    //-     this.page.url = "http://www.joncole.me/reaction-diffusion.html";  // Replace PAGE_URL with your page's canonical URL variable
-    //-     this.page.identifier = "reaction-diffusion"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-    //-     };
-    //-     (function() { // DON'T EDIT BELOW THIS LINE
-    //-     var d = document, s = d.createElement('script');
-    //-     s.src = '//joncole.disqus.com/embed.js';
-    //-     s.setAttribute('data-timestamp', +new Date());
-    //-     (d.head || d.body).appendChild(s);
-    //-     })();
-    //- noscript
-    //-     | Please enable JavaScript to view the 
-    //-     a(href='https://disqus.com/?ref_noscript') comments powered by Disqus.
+    #disqus_thread
+    script.
+        var disqus_config = function () {
+        this.page.url = "http://www.joncole.me/reaction-diffusion.html";  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = "reaction-diffusion"; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+        };
+        (function() { // DON'T EDIT BELOW THIS LINE
+        var d = document, s = d.createElement('script');
+        s.src = '//joncole.disqus.com/embed.js';
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+        })();
+    noscript
+        | Please enable JavaScript to view the 
+        a(href='https://disqus.com/?ref_noscript') comments powered by Disqus.
 
 
 append body
