--- a/partials/layout.pug
+++ b/partials/layout.pug
@@ -5,7 +5,7 @@
 doctype html
 html
     //
-        --- Website by Jonathan Cole ---
+        Website by Jonathan Cole
         This page was auto-generated with Pug. See https://github.com/seieibob/seieibob.github.io/tree/dev
 
     block dinosaur
