--- a/sass/partials/sidebar.scss
+++ b/sass/partials/sidebar.scss
@@ -152,6 +152,7 @@ $navbar-width: 220px;
                 padding-left: 10px;
                 width: 20px;
                 padding-right: 2.0em;
+                //font-size: 20px;
             }
         }
         &:hover {
@@ -217,6 +218,9 @@ $navbar-width: 220px;
     .main-content {
         width: calc(100% - #{$navbar-width});
         float: right;
+        // img.img-inline.img-responsive {
+        //     width: 30% !important;
+        // }
     }
     .nav-profile-image {
         border-color: black;
@@ -225,4 +229,5 @@ $navbar-width: 220px;
         //border-radius: 12px;
         //margin: 1em;
     }
+
 }
