--- a/partials/sidebar.pug
+++ b/partials/sidebar.pug
@@ -40,6 +40,7 @@ div
                         var project_cells = [
                             ["Media Ecology Project", '/pages/media-ecology/'],
                             ['Reaction-Diffusion', '/pages/reaction-diffusion/'],
+                            ["Jon Trombone", '/pages/jon-trombone/'],
                             ['Buoy Data Visualization', '/pages/lobo/'],
                             ['Spurious (Spatial) Correlations', '/pages/spurious-spatial-correlations/'],
                             ['Reflector', '/pages/reflector/']
