--- a/page/pages/jon-trombone/index.pug
+++ b/page/pages/jon-trombone/index.pug
@@ -31,7 +31,7 @@ append headinfo
 
 append scripts
     script(src='https://cdnjs.cloudflare.com/ajax/libs/three.js/84/three.min.js')
-    script(src='jon-trombone/dependencies/OrbitControls.js')
+    script(src='dependencies/OrbitControls.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.6.4/dat.gui.min.js')
 
 append head
@@ -68,5 +68,5 @@ append content
 
 
 append body
-    script(src='jon-trombone/js/jon-trombone.min.js')
+    script(src='js/jon-trombone.min.js')
 
