Update Waldorf to newest version

--- a/page/pages/media-ecology/index.pug
+++ b/page/pages/media-ecology/index.pug
@@ -35,12 +35,16 @@ append content
             section#Main
                 p.
                     Waldorf is a system for creating and viewing rich crowd-sourced annotations on video 
-                    around the Web. This work is created by me at the <a href='vemilab.org'>VEMILab</a>
+                    around the Web. I did this work at the <a href='vemilab.org'>VEMILab</a>
                     for the <a href='https://sites.dartmouth.edu/mediaecology/'>Media Ecology Project</a>
-                    at Dartmouth University, and is sponsored under an 
+                    at Dartmouth University. This work was sponsored under an 
                     <a href='http://www.knightfoundation.org/grants/20102605/'>NEH Grant</a>.
                 p.
                     The source is available on <a href='https://www.github.com/seieibob/Waldorf'>GitHub</a>.
+                p. 
+                    Isolating my own plugin styling from arbitrary page styling is an ongoing effort.
+                    If my code isn't working perfectly, please have a look at the 
+                    <a href='./raw.html'>emergency test page</a>. Please do not look directly at the bugs.
 
 
 append body
