Update Waldorf test page

--- a/page/pages/media-ecology/raw.pug
+++ b/page/pages/media-ecology/raw.pug
@@ -16,3 +16,8 @@ html
             var serverAddress = "http://ec2-52-88-72-190.us-west-2.compute.amazonaws.com:3000";
             var tagsAddress = "https://onomy.org/published/83/json";
             $("video").first().annotate(serverAddress, tagsAddress);
+
+        p.
+            You'll need to log in to add, remove, or edit annotations.<br>
+            <b>Username:</b> testuser <br>
+            <b>Password:</b> 1234 <br>
