--- a/page/pages/media-ecology/index.pug
+++ b/page/pages/media-ecology/index.pug
@@ -58,5 +58,6 @@ append body
     script.
         var serverAddress = "http://ec2-52-88-72-190.us-west-2.compute.amazonaws.com:3000";
         var tagsAddress = "https://onomy.org/published/83/json";
-        $("video").first().annotate(serverAddress, tagsAddress);
+        var apiKey = "a3ab0030-77f9-41b3-b78f-d7405c50b028";
+        $("video").first().annotate(serverAddress, tagsAddress, apiKey);
 
