Fix invasive ul style

--- a/page/about.pug
+++ b/page/about.pug
@@ -43,7 +43,7 @@ append content
     section#work
         h2 Work
         p #[b Current:]
-        ul
+        ul.arrow-marks
             li
                 p VR / AR / everything else developer at the #[a(href='http://www.vemilab.org/') VEMILab]
             li
@@ -55,7 +55,7 @@ append content
         
     section#education
         h2 Education
-        ul
+        ul.arrow-marks
             li
                 p #[b B.S. Computer Science] - #[i Spring 2015, University of Maine]
             li
@@ -69,7 +69,7 @@ append content
             academic work includes VR experiment design for human trials. I'm effective 
             both independently and in a team, and have worked in teams using Scrum and 
             Kanban methodologies.
-        ul
+        ul.arrow-marks
             li
                 p
                     span.highlight Languages:
