--- a/sass/partials/theme.scss
+++ b/sass/partials/theme.scss
@@ -68,7 +68,7 @@
         color: $bold_text_color;
     }
 
-    ul {
+    ul.arrow-marks {
         list-style-position: inside;
         padding-left:1.5em;
         > li {
