--- a/page/index.pug
+++ b/page/index.pug
@@ -70,7 +70,7 @@ append content
     
     section
         h4 Some things I've worked on:
-        ul
+        ul.arrow-marks
             li
                 p.
                     <a href='https://github.com/seieibob/OculusEye'>Oculus Eye</a> - 
