--- a/sass/partials/theme.scss
+++ b/sass/partials/theme.scss
@@ -14,6 +14,7 @@
     animation-duration: .38s;
     animation-fill-mode: both;
     animation-name: fadeInAnimation;
+    max-width: 768px;
 
     h1 {
         //text-align: center;
