--- a/page/pages/media-ecology/annotator-frontend.css
+++ b/page/pages/media-ecology/annotator-frontend.css
@@ -27,7 +27,13 @@
 
 .annotator-video-player {
   background-color: black;
-  position: relative; }
+  position: relative;
+  width: 100% !important;
+  height: auto !important; }
+  .annotator-video-player video {
+    width: 100%;
+    height: 100%;
+    display: block; }
 
 .annotator-fullscreen {
   width: 100% !important;
@@ -139,7 +145,8 @@
 .annotator-container {
   position: relative;
   height: auto;
-  display: inline-block; }
+  display: inline-block;
+  max-width: 100%; }
 
 .annotator-video-overlay {
   position: absolute;
