--- a/page/pages/media-ecology/index.pug
+++ b/page/pages/media-ecology/index.pug
@@ -28,7 +28,7 @@ append content
     .row
         h1 Waldorf - Media Ecology Project
         .col-md-10
-            video(width='640', height='480' playsinline)
+            video(playsinline)
                 source(src='http://sachinchoolur.github.io/lightGallery/static/videos/video2.mp4', type='video/mp4')
 
         .col-md-10
