--- a/page/pages/media-ecology/raw.pug
+++ b/page/pages/media-ecology/raw.pug
@@ -10,7 +10,7 @@ html
         script(type='text/javascript', src='annotator-frontend.js')
         link(rel='stylesheet', href='annotator-frontend.css')
     body
-        video(width='640', height='480' playsinline)
+        video(playsinline)
             source(src='http://sachinchoolur.github.io/lightGallery/static/videos/video2.mp4', type='video/mp4')
         script.
             var serverAddress = "http://ec2-52-88-72-190.us-west-2.compute.amazonaws.com:3000";
