--- a/page/pages/media-ecology/index.pug
+++ b/page/pages/media-ecology/index.pug
@@ -26,7 +26,8 @@ append headinfo
 
 append content
     .row
-        h1 Waldorf - Media Ecology Project
+        .col-md-12
+            h1 Waldorf - Media Ecology Project
         .col-md-10
             video(playsinline)
                 source(src='http://sachinchoolur.github.io/lightGallery/static/videos/video2.mp4', type='video/mp4')
