--- a/page/pages/media-ecology/index.pug
+++ b/page/pages/media-ecology/index.pug
@@ -29,7 +29,7 @@ append content
         .col-md-12
             h1 Waldorf - Media Ecology Project
         .col-md-10
-            video(playsinline)
+            video(width="640" height="480" playsinline)
                 source(src='http://sachinchoolur.github.io/lightGallery/static/videos/video2.mp4', type='video/mp4')
 
         .col-md-10
