Update with Chrome recommendation

--- a/page/pages/media-ecology/index.pug
+++ b/page/pages/media-ecology/index.pug
@@ -43,6 +43,7 @@ append content
                 p.
                     The source is available on <a href='https://www.github.com/seieibob/Waldorf'>GitHub</a>.
                 p. 
+                    Please use Chrome on this page for now.
                     Isolating my own plugin styling from arbitrary page styling is an ongoing effort.
                     If my code isn't working perfectly, please have a look at the 
                     <a href='./raw.html'>emergency test page</a>. Please do not look directly at the bugs.
