--- a/page/pages/media-ecology/raw.pug
+++ b/page/pages/media-ecology/raw.pug
@@ -17,3 +17,6 @@ html
             var tagsAddress = "https://onomy.org/published/83/json";
             var apiKey = "a3ab0030-77f9-41b3-b78f-d7405c50b028";
             $("video").first().annotate(serverAddress, tagsAddress, apiKey);
+
+        p.
+            For now, please visit this website with Chrome.
