--- a/partials/layout.pug
+++ b/partials/layout.pug
@@ -39,7 +39,7 @@ html
             // Load vendor CSS
             link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", rel="stylesheet")
             link(href="/dist/bootstrap/css/bootstrap-accessibility.css", rel="stylesheet")
-            link(href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css", rel="stylesheet")
+            link(href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css", rel="stylesheet")
 
             // Bootstrap Core
             script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
