--- a/page/pages/media-ecology/index.pug
+++ b/page/pages/media-ecology/index.pug
@@ -30,7 +30,7 @@ append content
             h1 Waldorf - Media Ecology Project
         .col-md-10
             video(width="640" height="480" playsinline)
-                source(src='http://sachinchoolur.github.io/lightGallery/static/videos/video2.mp4', type='video/mp4')
+                source(src='https://sachinchoolur.github.io/lightGallery/static/videos/video2.mp4', type='video/mp4')
 
         .col-md-10
             section#Main
@@ -39,7 +39,7 @@ append content
                     around the Web. I did this work at the <a href='vemilab.org'>VEMILab</a>
                     for the <a href='https://sites.dartmouth.edu/mediaecology/'>Media Ecology Project</a>
                     at Dartmouth University. This work was sponsored under an 
-                    <a href='http://www.knightfoundation.org/grants/20102605/'>NEH Grant</a>.
+                    <a href='https://www.knightfoundation.org/grants/20102605/'>NEH Grant</a>.
                 p.
                     The source is available on <a href='https://www.github.com/seieibob/Waldorf'>GitHub</a>.
                 p. 
@@ -52,13 +52,13 @@ append content
 append body
     // Include Annotator at the bottom of the page so it doesn't block loading
     // Import JQueryUI
-    script(src='http://code.jquery.com/ui/1.12.1/jquery-ui.min.js')
-    link(rel='stylesheet', href='http://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css')
+    script(src='https://code.jquery.com/ui/1.12.1/jquery-ui.min.js')
+    link(rel='stylesheet', href='https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css')
     // Annotator Core
     script(type='text/javascript', src='annotator-frontend.js')
     link(rel='stylesheet', href='annotator-frontend.css')
     script.
-        var serverAddress = "http://ec2-52-88-72-190.us-west-2.compute.amazonaws.com:3000";
+        var serverAddress = "https://ec2-52-88-72-190.us-west-2.compute.amazonaws.com:3000";
         var tagsAddress = "https://onomy.org/published/83/json";
         var apiKey = "a3ab0030-77f9-41b3-b78f-d7405c50b028";
         $("video").first().annotate(serverAddress, tagsAddress, apiKey);
