Update files to latest deployment

--- a/page/pages/jon-trombone/index.pug
+++ b/page/pages/jon-trombone/index.pug
@@ -75,4 +75,5 @@ append content
 
 append body
     script(src='js/jon-trombone.min.js')
+    link(rel='stylesheet', type='text/css', href='dat-gui.css')
 
