--- a/partials/sidebar.pug
+++ b/partials/sidebar.pug
@@ -41,6 +41,7 @@ div
                             ["Media Ecology Project", '/pages/media-ecology/'],
                             ['Reaction-Diffusion', '/pages/reaction-diffusion/'],
                             ["Jon Trombone", '/pages/jon-trombone/'],
+                            ["Dust", '/pages/dust/'],
                             ['Buoy Data Visualization', '/pages/lobo/'],
                             ['Spurious (Spatial) Correlations', '/pages/spurious-spatial-correlations/'],
                             ['Reflector', '/pages/reflector/']
