--- a/page/pages/media-ecology/raw.pug
+++ b/page/pages/media-ecology/raw.pug
@@ -11,9 +11,9 @@ html
         link(rel='stylesheet', href='annotator-frontend.css')
     body
         video(width="640" height="480" playsinline)
-            source(src='https://sachinchoolur.github.io/lightGallery/static/videos/video2.mp4', type='video/mp4')
+            source(src='http://sachinchoolur.github.io/lightGallery/static/videos/video2.mp4', type='video/mp4')
         script.
-            var serverAddress = "https://ec2-52-88-72-190.us-west-2.compute.amazonaws.com:3000";
+            var serverAddress = "http://ec2-52-88-72-190.us-west-2.compute.amazonaws.com:3000";
             var tagsAddress = "https://onomy.org/published/83/json";
             var apiKey = "a3ab0030-77f9-41b3-b78f-d7405c50b028";
             $("video").first().annotate(serverAddress, tagsAddress, apiKey);
