Fix menu bar overlapping dat.gui

--- a/page/pages/dust/index.pug
+++ b/page/pages/dust/index.pug
@@ -4,25 +4,79 @@ block dinosaur
 
     //
         ~
-           .-~~^-.
-         .'  O    \
-        (_____,    \
-         `----.     \
-               \     \
-                \     \
-                 \     `.             _ _
-                  \       ~- _ _ - ~       ~ - .
-                   \                              ~-.
-                    \                                `.
-                     \    /               /       \    \
-                      `. |         }     |         }    \
-                        `|        /      |        /       \
-                         |       /       |       /          \
-                         |      /`- _ _ _|      /.- ~ ^-.     \
-                         |     /         |     /          `.    \
-                         |     |         |     |             -.   ` . _ _ _ _ _ _
-                         |_____|         |_____|                ~ . _ _ _ _ _ _ _ >
-
+                                                                    _    
+                                                                   /M\        
+                                                                  O   O 
+                                                                  |/ \     
+                                                                  \___|
+                                                                 / ___/       
+                                                                 |   /      
+                                                                 /   /       
+                                                                 /   /        
+                                                                /    /        
+                                                                /    /        
+                                                                /    /        
+            \                                                   /   /      
+            \\                                                  /   /     
+             \|                                                 /   /         
+             | |                                                |   |         
+             \ |                                                |   |        
+             \ \                                               /    |        
+             \  |                                              |    /        
+              \ \                                              /    |       
+              \  \                                             |   /         
+              \  \                                            |    /         
+              \  \                                           |     /         
+              \  \                                           /    |/          
+              /  \                                           /    |           
+              /  \                                           /    /           
+              /  \                                           |    /           
+             /   /                                          /    |/           
+             |   /                                          /    |            
+            |    |                                          /    /            
+            |    |                                         |     /            
+           |     |                                         /    |/            
+          |     |                                          /    |             
+         |     /                                           /    /             
+        /     |                                           /     /             
+             |                                           |     //             
+            \                                          //      |              
+            \                                        -/        /            
+            \                                      -/          /              
+            \                                     /           |/              
+            \                     ________/---/--/            /             
+        |   \               -----/                           |/__           
+        |   |          /---/                                 |   \           
+        \    \        /                                     |/   |            
+        \    |       -                                      /     \          
+         \   \      /                                      /       |          
+         |    |    -                        \             /        |         
+         \    \   /                         |        \             |          
+         |    \   |                         \         \            \         
+         \     \ /     \           \         |         |           |          
+          |    \ /     \           |         \         \        |  \         
+          |     \|     \            |         |         |       /   |         
+           \     \      \           |         |         |       /   |         
+           |      \     /\          |         \         \      |    |         
+           |       \   /  \          \         |         |    /     |         
+            \          /   |         |\\\\\\\\\\\       |     /     \        
+             \         /    \\       |           \       |/--/ \     |       
+              \\      /\      \      |            |      |     |     |        
+                \     / \     /\      \           |      |     \     |        
+                 \    / /    / |      |           \      \     |     |       
+                  \--/  /    / \     /            |      |     \     |       
+                       /     /  \     |           \      \     \     |       
+                       |    |    |    |            |     |     |     \       
+                       |    |    |    |            |     |     \     |       
+                        |   \    \    |            \     /     |     /       
+                        |   /    |    \            |     |     \     |        
+                        /   |     \   |            \     \      \    /       
+                        |   \     |    |            |    |      \    |        
+                        /    |    |    \            |    |      \    |        
+                        |    \    |    |            /    \       |    \     
+                        /   #\    /     \           /    |       /    |       
+                                  /  ###\          /  ###\       /  ##\     
+        
 
 append headinfo
     meta(name='ROBOTS', content='INDEX, FOLLOW')
@@ -37,13 +91,14 @@ append scripts
 append head
     style.
         div#dust-container {
-            width: 512px;
-            height: 512px;
+            width: 100%;
+            height: auto;
             margin-top: 1.0em;
             display: block;
-            margin-left: auto;
-            margin-right: auto;
+            margin-left: 0.0em;
+            margin-right: 1.0em;
             margin-bottom: 3.0em;
+            cursor: default; /* Prevent caret from appearing when click-dragging */
         }
 
 
