Update github profile URL

--- a/partials/sidebar.pug
+++ b/partials/sidebar.pug
@@ -34,7 +34,7 @@ div
                 ul#menu-content.menu-content.collapse.out
                     +cell("Home", "Home", "fa-home", "/index.html")
                     +cell("About Me", "About", "fa-user", "/about.html")
-                    +cell("GitHub", "GitHub", "fa-github-square", "https://www.github.com/seieibob")
+                    +cell("GitHub", "GitHub", "fa-github-square", "https://www.github.com/colejd")
 
                     -
                         var project_cells = [
