--- a/page/about.pug
+++ b/page/about.pug
@@ -118,3 +118,32 @@ append content
         p.
             You can see a sample of my public work at my 
             #[a(href='https://www.github.com/seieibob') GitHub page].
+            
+    section#contact
+        h2 Contact
+        p
+            a(href='/resources/Resume_Jonathan_Cole_2017.pdf') Resume (PDF)
+            br
+            a(href='https://www.linkedin.com/in/joncole04412') LinkedIn
+            br
+            // Email hidden with Hivelogic Enkoder
+            | <script type="text/javascript">
+            | //<![CDATA[
+            | <!--
+            | var x="function f(x){var i,o=\"\",l=x.length;for(i=0;i<l;i+=2) {if(i+1<l)o+=" +
+            | "x.charAt(i+1);try{o+=x.charAt(i);}catch(e){}}return o;}f(\"ufcnitnof x({)av" +
+            | " r,i=o\\\"\\\"o,=l.xelgnhtl,o=;lhwli(e.xhcraoCedtAl(1/)3=!05{)rt{y+xx=l;=+;" +
+            | "lc}tahce({)}}of(r=i-l;1>i0=i;--{)+ox=c.ahAr(t)i};erutnro s.buts(r,0lo;)f}\\" +
+            | "\"(2)10\\\\,z\\\"4p00\\\\\\\\27\\\\07\\\\03\\\\\\\\02\\\\0Z\\\\25\\\\05\\\\" +
+            | "00\\\\\\\\XU3U03\\\\\\\\ZX\\\\S\\\\\\\\W\\\\4o03\\\\\\\\34\\\\00\\\\03\\\\\\"+
+            | "\\37\\\\02\\\\03\\\\\\\\DLEHKK4I03\\\\\\\\03\\\\0|\\\\qr2~swuxVp%'&'u!acbn`" +
+            | "dg3jsel n=]30\\\\00\\\\03\\\\\\\\16\\\\03\\\\02\\\\\\\\0Z03\\\\\\\\UD3^03\\" +
+            | "\\\\\\30\\\\06\\\\02\\\\\\\\06\\\\00\\\\03\\\\\\\\02\\\\00\\\\03\\\\\\\\1@0" +
+            | "3\\\\\\\\02\\\\06\\\\01\\\\\\\\07\\\\04\\\\03\\\\\\\\13\\\\00\\\\01\\\\\\\\" +
+            | "02\\\\0\\\\\\\\(\\\"}fo;n uret}r);+)y+^(i)t(eAodrCha.c(xdeCoarChomfrg.intr=" +
+            | "So+7;12%=;y=2y*))+y02(1i>f({i+)i+l;i<0;i=r(foh;gten.l=x,l\\\"\\\\\\\"\\\\o=" +
+            | "i,r va){,y(x fontincfu)\\\"\")"                                              ;
+            | while(x=eval(x));
+            | //-->
+            | //]]>
+            | </script>
