--- a/partials/sidebar.pug
+++ b/partials/sidebar.pug
@@ -42,6 +42,7 @@ div
                             ['Reaction-Diffusion', '/pages/reaction-diffusion/'],
                             ["Jon Trombone", '/pages/jon-trombone/'],
                             ["Dust", '/pages/dust/'],
+                            ["Mazer", '/pages/mazer/'],
                             ['Buoy Data Visualization', '/pages/lobo/'],
                             ['Spurious (Spatial) Correlations', '/pages/spurious-spatial-correlations/'],
                             ['Reflector', '/pages/reflector/']
