--- a/page/pages/mazer/index.pug
+++ b/page/pages/mazer/index.pug
@@ -51,12 +51,14 @@ append head
 
 append content
     .row
-        h1 Mazer
         .col-md-10
-            #mazer-container
+            object
+                #mazer-container
+            hr
 
         .col-md-10
             section#Main
+            h1 Mazer
                 p.
                     This is a little program that generates and solves various types
                     of mazes. I will be revisiting this in the future when I have more 
