Update jon-trombone about page

--- a/page/pages/jon-trombone/index.pug
+++ b/page/pages/jon-trombone/index.pug
@@ -73,9 +73,9 @@ append content
                     which simulates the nose and throat to produce synthesized human vocals. You can play
                     around with the controls in the upper-right.
                 p.
-                    Regrettably, this program supports MIDI playback. Drag any MIDI file onto my face
-                    to load it, then use the GUI to start the playback. Keep in mind that as of right now
-                    (wink wink nudge nudge) only one track and one voice is played, so chords won't work.
+                    Regrettably, this program supports MIDI playback. Use the GUI to load a MIDI file and
+                    start the playback. Keep in mind that as of right now (wink wink nudge nudge) only one 
+                    track and one voice is played, so chords won't work.
                 p.
                     The source is available on <a href='https://github.com/seieibob/jon-trombone'>GitHub</a>.
                 p.
